--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="M2U-jc-RuN" id="Ehd-eS-nog"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="DBo-No-APA"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="DBo-No-APA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cQZ-aP-jIC">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="M2U-jc-RuN" id="2N1-bP-hBK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ePg-IO-bZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
